# gpkgtogeojson

./: README.md  example.gpkg  fly.toml  index.html  main.py  pyproject.toml
.github/workflows/: GCP.yaml  fly.yml
backend/: dst.geojson  fly.toml  main.py  requirements.txt  src.gpkg
frontend/: Dockerfile  fly.toml  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
usagecheck/: Dockerfile  cloudbuild.yaml  requirements.txt
usagecheck/src/: main.py  main.sh  uploadres.py
